# sing-tools

./: .gitignore  Dockerfile  Dockerfile.mt3000  README.md  app.py  clash2sing.py  cli.py  common.py  config.yaml  db.json  gen.sh  gw_gen.sh  lib.py  local-sing.sh  pyproject.toml  ref.py  requirements.txt  rules.csv  stat.py  surge2sing.py
sing/: cli.py  config.template.json  gen.sh  lib.py
src/sing_tools/: __main__.py  clash2sing.py  cli.py  lib.py  stat.py
src/sing_tools/run/: config.json
src/sing_tools/stat/: .gitignore  main.py
stat/: collect.py  main.py  stat.py
templates/: _base.yaml
